# equity-research-system

./: .env.example  .gitignore  AGENTS.md  AI_REPORTING_IMPROVEMENT_PLAN.md  CLAUDE.md  PROGRESS.md  PROJECT_PLAN.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4cc0d92dd20c_add_summary_jsonb_column_to_earnings_.py  67aec4ab4081_add_earnings_transcripts_analyst_.py  6e71872b470c_initial_schema.py  a373e00ed4ca_add_stock_decisions_table.py  e1a312a426bc_add_valuations_table.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: base.py  earnings_agent.py  industry_agent.py  news_agent.py  orchestrator.py  transcript_summarizer.py  transcript_utils.py  validation_agent.py  valuation_agent.py
backend/app/api/: analysis.py  decision.py  ingestion.py  scoring.py  stocks.py
backend/app/decision/: engine.py  risk_flags.py
backend/app/ingestion/: analyst_estimates.py  computed_metrics.py  earnings_surprises.py  fmp_client.py  fmp_financials.py  fundamentals.py  news.py  pipeline.py  prices.py  scheduler.py  transcripts.py
backend/app/models/: __init__.py  analysis.py  decision.py  document.py  earnings.py  estimate.py  financial.py  insider.py  price.py  score.py  stock.py  transcript.py  valuation.py
backend/app/quant/: ai_features.py  hard_features.py  normalizer.py
backend/app/schemas/: stock.py
backend/app/scoring/: calculator.py  weights.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
(+7 files in other folders)
